@@ -1,8 +1,11 @@
 #!/usr/bin/python3
 import os
 import sys
+from debian.changelog import Version
 from lintian_brush.control import (
+    ensure_exact_version,
     ensure_minimum_version,
+    get_relation,
     update_control,
     )
 
@@ -27,18 +30,41 @@ if os.path.exists('debian/compat'):
     else:
         # Nothing to do
         sys.exit(2)
+
+    def bump_debhelper(control):
+        control["Build-Depends"] = ensure_minimum_version(
+                control["Build-Depends"],
+                "debhelper",
+                "%d~" % new_debhelper_compat_version)
+
+    update_control(source_package_cb=bump_debhelper)
 else:
-    sys.exit(2)
+    # Assume that the compat version is set in Build-Depends
+    def bump_debhelper_compat(control):
+        global current_debhelper_compat_version
+        try:
+            debhelper_compat_relation = get_relation(
+                control["Build-Depends"], "debhelper-compat")
+        except KeyError:
+            sys.exit(2)
+        else:
+            if len(debhelper_compat_relation) > 1:
+                # Not sure how to deal with this..
+                sys.exit(2)
+            if debhelper_compat_relation[0].version[0] != '=':
+                # Not sure how to deal with this..
+                sys.exit(2)
+            current_debhelper_compat_version = Version(
+                debhelper_compat_relation[0].version[1])
+        if current_debhelper_compat_version < new_debhelper_compat_version:
+            control["Build-Depends"] = ensure_exact_version(
+                    control["Build-Depends"],
+                    "debhelper-compat",
+                    "%d" % new_debhelper_compat_version)
+
+    update_control(source_package_cb=bump_debhelper_compat)
 
 
-def bump_debhelper(control):
-    control["Build-Depends"] = ensure_minimum_version(
-            control["Build-Depends"],
-            "debhelper",
-            "%d~" % new_debhelper_compat_version)
-
-
-update_control(source_package_cb=bump_debhelper)
 if current_debhelper_compat_version < minimum_debhelper_version:
     kind = "deprecated"
     tag = "package-uses-deprecated-debhelper-compat-version"
