@@ -17,6 +17,8 @@ lintian-brush (0.14) UNRELEASED; urgency=medium
     matching Lintian tag).
   * Add fixer that removes empty debian/patches/series (no matching
     lintian tag).
+  * Support updating debhelper-compat version in packages that use the
+    debhelper-compat relation in Build-Depends.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 16 Feb 2019 15:11:25 +0000
 
